crates/analyzer/tests/snapshots/errors__return_addition_with_mixed_types.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: The types for this operation must be equal
  ┌─ compile_errors/return_addition_with_mixed_types.fe:3:16
  │
3 │         return x + y
  │                ^   ^


